# GESSO

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
demo_data/: 10xVisiumBRCA-location_data.pkl  10xVisiumBRCA-pathways_data.pkl
docs/: api_reference.rst  conf.py  gesso_demo.ipynb  gesso_demo_10xvisium.ipynb  index.rst  intro.rst  requirements.txt  splat_demo.ipynb
docs/classes/: GESSO.rst  GeneSetActivityScoresReport.rst  PathwayActivityScoresReport.rst  PermutationTestReport.rst  SPLAT.rst
gesso/: __init__.py  logging.py
gesso/_src/: __init__.py  computation.py  console.py  gesso.py  interactive.py
splat/: __init__.py
splat/_src/: __init__.py  computation.py  console.py  interactive.py  splat.py
tests/: conftest.py
